# time_series

./: .gitignore  final.ipynb  final_2.ipynb  final_binary.ipynb  final_multiclass.ipynb  optuna_trials.csv  prepytorch.py  pyproject.toml  reg+static+imbalance.ipynb  regression+static.ipynb  regression.ipynb
